feat(simulation): Tetree-backed SpatialNeighborIndex [Luciferase-mj7]
RDR-003 Phase 0 Step 2. Replaces the linear-scan ConcurrentHashMap
implementation with a Tetree<UUIDEntityID, Node>. findWithinRadius now
delegates to AbstractSpatialIndex.findNeighborsIncludingGhosts;
findKNearest delegates to AbstractSpatialIndex.kNearestNeighbors. The
Tetree is the actual spatial index VoN's class name has implied since
v4.0.

Public API preserved:
- The existing 2-arg constructor SpatialNeighborIndex(aoiRadius,
  boundaryBuffer) keeps working. It now computes the spatial level via
  SpatialLevelHeuristic.computeDefault(aoiRadius) — the same Step 0
  algorithm — and constructs the Tetree at that level. For the canonical
  VoN configuration (aoiRadius=50, world=200) this is level 18.
- New 3-arg constructor SpatialNeighborIndex(aoiRadius, boundaryBuffer,
  spatialLevel) is additive; deployments can pin a specific level when
  the AoI distribution diverges from the heuristic target.

Behavioral contract change:
- updatePosition is no longer a no-op. The Tetree's spatial pruning
  depends on entities being stored at their current centroid, so callers
  that move a node MUST invoke updatePosition. MoveProtocol.move
  already does so; existing callers get correct bucketing automatically.
- Tetree requires non-negative coordinates. The existing
  SpatialNeighborIndexTest already honors this contract explicitly
  (clamps test entity coords to >= 1).

findOverlapping:
- A spatial broad-phase via centroid envelope was implemented first but
  reverted: the Tetree indexes by centroid, while a node's bounds can
  extend past the centroid into the query bounds. A centroid-based
  pre-filter therefore misses valid candidates. findOverlapping is now
  iterate-all-and-filter (same as the prior linear-scan impl); rationale
  documented inline. findOverlapping is the JOIN-protocol path, not the
  AoI hot path that Phase 0 is closing.

Tests:
- VoN suite (SpatialNeighborIndexTest, JoinProtocolTes